--- a/css/style.css
+++ b/css/style.css
@@ -112,14 +112,33 @@ body {
     height: 8em;
     background-color: skyblue;
 }
-.ovalButton{
+.ovalButtons{
     width: 7em;
-    height: 3em;
+    height: 4em;
     background-color: plum;
+    display: flex;
+    justify-content: space-around;
+}
+.selectButton, .startButton{
+    width: 2em;
+    height: 0.7em;
+    margin: 1.8em 0 0.6em 0;
+    background-color: black;
+    border-radius: 2em;
+    box-shadow: 0 0 0 0.2em rgba(58, 11, 11, 0.514);
+}
+.selectText, .startText{
+    width: 1em;
+    height: 1em;
+    font-family:sans-serif;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: rgba(214, 57, 214);
+    margin-left: -0.4em;
 }
 .emptyBottom{
     width: 7em;
-    height: 5em;
+    height: 4em;
     background-color: purple;
 }
 .dots{
