--- a/css/style.css
+++ b/css/style.css
@@ -70,16 +70,14 @@ body {
 
 /* Estructura del medio*/
 .middle{
-    height: 7em;
-    background-color: blue;
+    height: 6em;
     display: flex;
 }
 .aroundCross{
     width: 8em;
-    height: 7em;
-    background-color: yellowgreen;
+    height: 6em;
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: center;
 }
 .cross{
@@ -106,43 +104,54 @@ body {
 }
 .emptyMiddle{
     width: 5em;
-    height: 8em;
-    background-color: yellow;
+    height: 6em;
 }
-.circularButton1, .circularButton2{
+.aroundButtonB, .aroundButtonA{
     width: 2.5em;
-    height: 7em;
-    background-color: orange;
+    height: 6em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.aroundButtonB{
+    align-items: end;
+}
+.buttonB, .buttonA{
+    width: 1.2em;
+    height: 1.2em;
+    background-color: rgb(39, 39, 39) ;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: xx-large;
 }
 .emptyRight{
     width: 1.5em;
     height: 7em;
-    background-color: orangered;
 }
 
 
 /* Estructura de la parte inferior*/
 .bottom{
-    height: 8em;
-    background-color: green;
+    height: 9em;
     display: flex;
 }
 .emptyLeft{
     width: 7em;
-    height: 8em;
-    background-color: blue;
+    height: 9em;
 }
 .bottomMiddle{
     width: 7em;
-    height: 8em;
-    background-color: skyblue;
+    height: 9em;
 }
 .ovalButtons{
     width: 7em;
-    height: 4em;
-    background-color: plum;
+    height: 5em;
+    background-color:lightcoral;
     display: flex;
     justify-content: space-around;
+    align-items: end;
 }
 .selectButton, .startButton{
     width: 2em;
@@ -150,26 +159,24 @@ body {
     margin: 1.8em 0 0.6em 0;
     background-color: black;
     border-radius: 2em;
-    box-shadow: 0 0 0 0.2em rgba(58, 11, 11, 0.514);
+    box-shadow: 0 0 0 0.2em rgba(166, 78, 78, 0.668);
 }
 .selectText, .startText{
     width: 1em;
     height: 1em;
-    font-family:sans-serif;
+    font-family: sans-serif;
     font-size: 0.8em;
     font-weight: bold;
-    color: rgba(214, 57, 214);
+    color: rgb(245, 95, 95);
     margin-left: -0.4em;
 }
 .emptyBottom{
     width: 7em;
     height: 4em;
-    background-color: purple;
+  
 }
 .dots{
     width: 7em;
-    height: 8em;
+    height: 9em;
     background-color: cornflowerblue;
 }
-
-
