--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ body {
 .main{
     width: 21em;
     height: 36em;
+    /* background-image: url(../img/fondo.jpeg);
+    background-repeat: no-repeat;
+    background-size:cover; */
     background-image: linear-gradient(to bottom, rgb(200, 75, 75), lightcoral, rgb(200, 75, 75));
     border: 0.1em outset rgba(0, 0, 0, 0.44);
     border-radius: 30em/7em;
@@ -113,38 +116,40 @@ body {
     align-items: center;
 }
 .arrow{
-    background-color: rgb(39, 39, 39);
+    /* background-color: rgb(39, 39, 39); */
+    background-image: linear-gradient(to right, rgb(52, 52, 52), rgb(39, 39, 39));
     box-shadow: inset 0.2em white;
     box-sizing: border-box;
 }
 .arrowTop{
-    border-top: solid 0.2em rgb(22, 22, 22);
-    border-left: solid 0.2em rgb(22, 22, 22);
-    border-right: solid 0.2em rgb(22, 22, 22);
+    border-top: solid 0.2em rgb(33, 33, 33);
+    border-left: solid 0.2em rgb(66, 66, 66);
+    border-right: solid 0.2em rgb(25, 25, 25);
     border-top-right-radius: 0.3em;
     border-top-left-radius: 0.3em;
 }
 .arrowLeft{
-    border-top: solid 0.2em rgb(22, 22, 22);
-    border-left: solid 0.2em rgb(22, 22, 22);
+    border-top: solid 0.2em rgb(70, 70, 70);
+    border-left: solid 0.2em rgb(60, 60, 60);
     border-bottom: solid 0.2em rgb(22, 22, 22);
     border-top-left-radius: 0.3em;
     border-bottom-left-radius: 0.3em;
 }
 .arrowBottom{
     border-bottom: solid 0.2em rgb(22, 22, 22);
-    border-left: solid 0.2em rgb(22, 22, 22);
-    border-right: solid 0.2em rgb(22, 22, 22);
+    border-left: solid 0.2em rgb(60, 60, 60);
+    border-right: solid 0.2em rgb(20, 20, 20);
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
+
 }
 .arrowRight{
-    border-top: solid 0.2em rgb(22, 22, 22);
+    border-top: solid 0.2em rgb(60, 60, 60);
     border-right: solid 0.2em rgb(22, 22, 22);
-    border-bottom: solid 0.2em rgb(22, 22, 22);
+    border-bottom: solid 0.2em rgb(20, 20, 20);
     border-top-right-radius: 0.3em;
-    border-bottom-right-radius: 0.3em;
-    
+    border-bottom-right-radius: 0.3em;  
+      
 }
 .emptyMiddle{
     width: 5em;
@@ -169,7 +174,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: xx-large;
-    border: 0.01em solid rgba(0, 0, 0, 0.844);
+    border: 0.06em solid rgba(0, 0, 0, 0.49);
     border-right: 0.08em solid rgba(0, 0, 0, 0.864);
 }
 .emptyRight{
@@ -188,7 +193,7 @@ body {
     background-image: linear-gradient(to right, rgb(44, 44, 44), rgb(19, 19, 19));
 }
 .arrow:hover{
-    background-color: rgb(63, 63, 63);
+    background-color: rgb(35, 34, 34);
 }
 
 
