--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,6 @@ body {
 .main{
     width: 21em;
     height: 36em;
-    /* background-image: url(../img/fondo.jpeg);
-    background-repeat: no-repeat;
-    background-size:cover; */
     background-image: linear-gradient(to bottom, rgb(200, 75, 75), lightcoral, rgb(200, 75, 75));
     border: 0.1em outset rgba(0, 0, 0, 0.44);
     border-radius: 30em/7em;
@@ -26,11 +23,15 @@ body {
     border-top-right-radius: 2em;
     box-shadow: 8px 8px 7px -1px rgba(0,0,0,0.65);
 }
+.makeTransparent{
+    background-image: url(../img/transparent.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 /* Estructura de la pantalla*/
 .top{
-    height: 16.2em; 
-    background-color: transparent;
+    height: 16.2em;
 }
 .borderScreen{
     width: 18.6em;
@@ -75,7 +76,7 @@ body {
     height: 11em;
     background-image: linear-gradient(to right, rgb(125, 124, 124), rgb(52, 51, 51));
 }
-.screenOn1{
+.turnOn{
     background-image: url(../img/nintendoLogo.gif);
     background-repeat: no-repeat;
     background-size: contain;
@@ -112,8 +113,9 @@ body {
     width: 8em;
     height: 7em;
     display: flex;
-    align-items: center;
-    justify-content: right;
+    align-items: start;
+    justify-content: center;
+   
 }
 .cross{
     width: 5.5em;
@@ -122,6 +124,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
+   
 }
 .arrow, .empty{
     color: rgb(21, 20, 20);
@@ -176,9 +179,6 @@ body {
     justify-content: center;
     align-items: center;
 }
-.aroundButtonB{
-    align-items: end;
-}
 .buttonB, .buttonA{
     width: 1.2em;
     height: 1.2em;
@@ -191,13 +191,19 @@ body {
     border: 0.06em solid rgba(0, 0, 0, 0.49);
     border-right: 0.08em solid rgba(0, 0, 0, 0.864);
 }
+.buttonB{
+    margin-top: 0.5em;
+}
+ .buttonA{
+     margin-bottom: 1.2em;
+}
 .emptyRight{
     width: 1.5em;
     height: 7em;
 }
 
 .buttonB:hover, .buttonA:hover{
-    background-image: linear-gradient(to right, rgb(110, 110, 110), rgb(39, 39, 39));
+    background-image: linear-gradient(to right, rgb(99, 99, 99), rgb(39, 39, 39));
     width: 1.1em;
     height: 1.1em;
 }
@@ -207,7 +213,7 @@ body {
     background-image: linear-gradient(to right, rgb(44, 44, 44), rgb(19, 19, 19));
 }
 .arrow:hover{
-    background-color: rgb(35, 34, 34);
+    background-image: linear-gradient(to right, rgb(44, 44, 44), rgb(19, 19, 19));
 }
 
 
@@ -233,11 +239,13 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: end;
+
+  
 }
 .selectButton, .startButton{
     width: 2em;
     height: 0.7em;
-    margin: 1.8em 0 0.6em 0;
+    margin: 1.8em 0 0.6em 0.8em;
     background-color: black;
     border-radius: 2em;
     box-shadow: 0 0 0 0.2em rgba(171, 66, 66, 0.881);
@@ -249,7 +257,7 @@ body {
     font-size: 0.8em;
     font-weight: bold;
     color: rgba(171, 66, 66, 0.881);
-    margin-left: -0.4em;
+    margin-left: 0.6em;
 }
 .emptyBottom{
     width: 7em;
